# mt_client

./: .gitignore  Cargo.toml
assets/: ascii-art.txt
assets/shaders/: map.wgsl
src/: gfx.rs  main.rs  net.rs
src/gfx/: camera.rs  debug_menu.rs  font.rs  gpu.rs  map.rs  media.rs  state.rs  util.rs
src/gfx/map/: atlas.rs  mesh.rs
